--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,6 +15,98 @@ body {
     overflow-x: hidden;
 }
 
+:root {
+    --font-size-base: 16px;
+    --font-color: #333;
+    --h1-size: 3em;
+    --h2-size: 1.5em;
+    --h3-size: 1.17em;
+    --h4-size: 1em;
+    --h5-size: 0.83em;
+    --h6-size: 0.75em;
+    --p-size: 1em;
+    --small-size: 0.8em;
+    --blockquote-size: 1.25em;
+    --pre-size: 1em;
+    --code-size: 0.85em;
+    --label-size: 1em;
+    --input-size: 1em;
+    --button-size: 1em;
+    --li-size: 1em;
+    --figcaption-size: 0.9em;
+  }
+  
+  body {
+    font-size: var(--font-size-base);
+    color: var(--font-color);
+  }
+  
+  h1 {
+    font-size: var(--h1-size);
+  }
+  
+  h2 {
+    font-size: var(--h2-size);
+  }
+  
+  h3 {
+    font-size: var(--h3-size);
+  }
+  
+  h4 {
+    font-size: var(--h4-size);
+  }
+  
+  h5 {
+    font-size: var(--h5-size);
+  }
+  
+  h6 {
+    font-size: var(--h6-size);
+  }
+  
+  p {
+    font-size: var(--p-size);
+  }
+  
+  small {
+    font-size: var(--small-size);
+  }
+  
+  blockquote {
+    font-size: var(--blockquote-size);
+  }
+  
+  pre {
+    font-size: var(--pre-size);
+  }
+  
+  code {
+    font-size: var(--code-size);
+  }
+  
+  label {
+    font-size: var(--label-size);
+  }
+  
+  input {
+    font-size: var(--input-size);
+  }
+  
+  button {
+    font-size: var(--button-size);
+  }
+  
+  li {
+    font-size: var(--li-size);
+  }
+  
+  figcaption {
+    font-size: var(--figcaption-size);
+  }
+  
+
+
 
 /* Info Nav Bar */
 .nav-info {
@@ -152,8 +244,8 @@ nav ul li.dropdown:hover .dropdown-content {
 /* Media query for screens up to 768px */
 
 
-
-/* Main Image*/
+/* ----- Home Page -----*/
+/* Main Image */
 
 .image-main {
     position: relative;
@@ -188,7 +280,151 @@ nav ul li.dropdown:hover .dropdown-content {
     text-align: center;
 }
 
-/* Footer */
+/*----- About Us Page ----- */
+.about-us .image-main .small-main-image {
+    margin: 1% auto;
+    height: 250px;
+    width: 100%;
+    filter: opacity(60%);
+}
+
+.about-us .image-main {
+    position: relative;
+}
+
+.about-us .image-text {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.about-us .no-home-page-text {
+    margin: 0;
+    color: black; /* Adjust color as needed */
+    font-size: 50px; /* Adjust size as needed */
+    position: relative;
+}
+
+/*----- Who Are We Section -----*/
+
+.about-us-main {
+    margin: -5% auto;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    min-height: 100vh;
+    max-height: fit-content; /* Ensure it takes up the full viewport height */
+}
+
+
+.about-us-main .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.about-us-main .about-content {
+    display: flex;
+    justify-content: space-between; /* Space between text and image */
+    align-items: center; /* Center items vertically */
+    width: 100%;
+    max-width: 1200px; /* Optional: set a max-width for the content */
+    padding: 10px;
+}
+
+.about-us-main .text {
+    flex: 1 ;
+}
+
+.about-us-main .image {
+    width: 100%;
+    flex: 1 ;
+    text-align: center;
+}
+
+.about-us-main h2 {
+    color: #d32f2f;
+}
+
+.about-us-main h1 {
+    color: #1e3a8a;
+    font-size: 2em;
+}
+
+.about-us-main p {
+    max-width: 500px;
+    text-wrap: wrap;
+    line-height: 1.6;
+    margin: 10px 0;
+}
+
+.about-us-main .contact-button {
+    margin-top: 20px;
+}
+
+.about-us-main .contact-button a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #d32f2f;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.about-us-main .image img {
+    max-width: 100%;
+    height: 500px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.about-us-main footer.contact-info {
+    margin-top: 20px;
+    text-align: center;
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.about-us-main footer.contact-info p {
+    margin: 5px 0;
+    font-size: 1.1em;
+    color: #1e3a8a;
+}
+
+.about-content .image a {
+    display: inline-flex; /* Aligns image and text horizontally */
+    align-items: center; /* Centers items vertically */
+    margin: 10px; /* Space around each link */
+    text-decoration: none; /* Remove underline from links */
+    color: inherit; /* Inherit text color from parent */
+}
+
+/* Style the images within the links */
+.about-content .image a img {
+    width: 24px; /* Adjust size of the icons */
+    height: 24px; /* Ensure icons are square */
+    margin-right: 8px; /* Space between image and text */
+}
+
+
+/* Hover effects */
+.about-content .image a:hover img {
+    opacity: 0.8; /* Slightly fade the image on hover */
+}
+
+.about-content a:hover span {
+    text-decoration: underline; /* Underline text on hover */
+}
+
+/*----- Footer -----*/
 
 :root {
     --footer-background-color: rgb(0, 0, 0);
@@ -550,9 +786,6 @@ footer {
 }
 
 /* Responsive Css*/
-nav .fas {
-    display: none;
-}
 
 @media only screen and (max-width: 1600px){
 
