--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -254,7 +254,7 @@ nav ul li.dropdown:hover .dropdown-content {
 
 .image-main img {
     height: auto; /* Adjust the height as needed */
-    max-width: 100%; /* Maintain aspect ratio */
+    width: 100%; /* Maintain aspect ratio */
     display: block; /* Remove inline-block spacing issue */
     margin: 0 auto; /* Center the image if needed */
 }
@@ -464,7 +464,7 @@ form .btn.btn2 {
 
 /*----- Who Are We Section -----*/
 
-.about-us-main {
+.about-us-main-container {
     margin: 3% auto 0 auto;
     display: flex;
     justify-content: center; /* Center horizontally */
@@ -474,13 +474,13 @@ form .btn.btn2 {
 }
 
 
-.about-us-main .container {
+.about-us-main-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 10px;
 }
 
-.about-us-main .about-content {
+.about-us-main-container .about-content {
     display: flex;
     justify-content: space-between; /* Space between text and image */
     align-items: center; /* Center items vertically */
@@ -489,39 +489,39 @@ form .btn.btn2 {
     padding: 10px;
 }
 
-.about-us-main .text {
+.about-us-main-container .text {
     flex: 1 ;
 }
 
-.about-us-main .image {
+.about-us-main-container .image {
     width: 100%;
     flex: 1 ;
     text-align: center;
 }
 
-.about-us-main h2 {
+.about-us-main-container h2 {
     margin: 15px auto;
     color: #ee152b;
 }
 
-.about-us-main h1 {
+.about-us-main-container h1 {
     margin: 10px auto;
     color: #000;
     font-size: 2em;
 }
 
-.about-us-main p {
+.about-us-main-container p {
     max-width: 500px;
     text-wrap: wrap;
     line-height: 1.6;
     margin: 10px 0;
 }
 
-.about-us-main .contact-button {
+.about-us-main-container .contact-button {
     margin-top: 20px;
 }
 
-.about-us-main .contact-button a {
+.about-us-main-container .contact-button a {
     display: inline-block;
     padding: 10px 20px;
     background-color: #d32f2f;
@@ -530,13 +530,13 @@ form .btn.btn2 {
     border-radius: 5px;
 }
 
-.about-us-main .image img {
+.about-us-main-container .image img {
     max-width: 100%;
     height: 500px;
     border-radius: 10px;
 }
 
-.about-us-main footer.contact-info {
+.about-us-main-container footer.contact-info {
     margin-top: 20px;
     text-align: center;
     background-color: #f5f5f5;
@@ -544,7 +544,7 @@ form .btn.btn2 {
     border-radius: 10px;
 }
 
-.about-us-main footer.contact-info p {
+.about-us-main-container footer.contact-info p {
     margin: 5px 0;
     font-size: 1.1em;
     color: #1e3a8a;
@@ -805,9 +805,12 @@ form .btn.btn2 {
 
 .services-container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap; /* Allows items to wrap onto the next line */
+    justify-content: space-between; /* Distribute space between items */
+    align-items: flex-start; /* Align items at the top */
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box; /* Include padding in width calculations */
   
 }
 .service-card {
@@ -888,7 +891,7 @@ form .btn.btn2 {
 
 .service-prices-title h1 {
     margin: 0;
-    font-size: 22px;
+    font-size: 32px;
 }
 
 .service-prices {
@@ -929,11 +932,82 @@ form .btn.btn2 {
     margin-bottom: 0.5rem;
 }
 
+/*----- Partners Page -----*/
+
+.partners-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.partner-card {
+    width: 550px;
+    height: 300px;
+    perspective: 1000px;
+}
+
+.card-front, .card-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    transition: transform 0.6s;
+}
+
+.card-front {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-back {
+    background-color: #007BFF;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.partner-card:hover .card-front {
+    transform: rotateY(-180deg);
+}
+
+.partner-card:hover .card-back {
+    transform: rotateY(0deg);
+}
+
+.learn-more-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #d32f2f;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.learn-more-button:hover {
+    text-decoration: underline;
+    background-color: #ff002f;
+}
+
+
+
 /*----- Blog Page -----*/
 
 .blog-container {
     width: 90%;
-    margin: 20px;
+    margin: 20px auto;
     display: flex;
     justify-content: space-between;
     padding: 20px;
@@ -967,12 +1041,14 @@ form .btn.btn2 {
 
 .post-content {
     margin-bottom: 20px;
+    text-decoration: none;
+    list-style-type: none;
 }
 
 .recent-posts {
     flex: 1;
     background: #eee;
-    margin-left: 100px;
+    margin-top: 50px;
     padding: 10px;
     border-radius: 5px;
 }
@@ -982,8 +1058,21 @@ form .btn.btn2 {
     font-size: 1.5em;
 }
 
+.post-content h2,
+.post-content p,
+.post-content ul  {
+    list-style-type: none;
+    }
+
+
+.recent-post-item a {
+    font-size: 20px;
+    text-decoration: none;
+}
+
 .recent-posts-list {
     list-style: none;
+    padding: 0;
 }
 
 .recent-post-item {
@@ -999,6 +1088,7 @@ form .btn.btn2 {
 .recent-post-link:hover {
     color: #007BFF;
 }
+
 
 
 /*----- Footer -----*/
@@ -1268,29 +1358,141 @@ footer {
 
 /*----- Responsive Css-----*/
 
-@media only screen and (max-width: 1600px){
+@media only screen and (max-width: 1300px){
 
-    .copyright ul li {
-        margin: 0 5px;
+    .nav-info {
+        display: none;
+    }
+    
+    .menu-toggle {
+        display: block; /* Show menu toggle icon */
+    }
+
+    #mainImage {
+        height: 500px;
+        width: 100%;/* Hide the original image on smaller screens */
+        filter:blur(3px);
+    }
+    .image-main h1 {
+        font-size: 24px;
+        text-wrap: wrap;
+        margin-top: -30px;
+    }
+    
+    nav ul {
+        display: none;
+        flex-direction: column;
+        position: fixed; /* Fixed position to cover full viewport height */
+        top: 0;
+        right: 0;
+        width: 60%; /* Adjust width as needed */
+        height: 100vh; /* Full viewport height */
+        background-color: #ffffff;
+        box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.1);
+        z-index: 1000; /* Ensure menu is above other content */
+        padding: 20px;
+        transition: transform 0.3s ease-in-out;
+        transform: translateX(-100%); /* Start off-screen */
+    }
+    
+    nav ul.open {
+        display: flex;
+        transform: translateX(0);
+    }
+    
+    nav ul li {
+        margin: 10px 0;
+    }
+    
+    .menu-toggle span {
+        background-color: #000;
+        transition: transform 0.3s ease;
+    }
+    
+    .menu-toggle.open span:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+    
+    .menu-toggle.open span:nth-child(2) {
+        opacity: 0;
+    }
+    
+    .menu-toggle.open span:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+    
+    .dropdown-content {
+        position: static; /* Reset dropdown positioning */
+        display: none; /* Hide dropdowns initially */
+        max-height: none; /* Reset max-height */
+        overflow-y: visible; /* Reset overflow */
+        margin-top: 0; /* Reset margin */
+    }
+    
+    nav ul li.dropdown:hover .dropdown-content {
+        display:none; /* Keep dropdowns hidden on hover */
+    }
+
+    .why-us.container {
+        height: fit-content;
+    }
+
+    .reviews-container {
+        height: 100%;
+        overflow-x:hidden;
+    }
+
+    .reviews-carousel {
+        max-width: 90%;
+        overflow-x: scroll;
+    }
+
+    .contact-form .sub-title {
+        text-align: center;
+    }
+
+    .contact-form {
+        height: fit-content;
+        overflow-y: hidden;
+    }
+
+    .contact-form-side form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .contact-form-side iframe {
+        width: 100%;
+    }
+
+      .copyright {
+        margin: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .copyright p {
+        margin: 0; /* Removes default margin */
+        font-size: 14px; /* Example font size */
+    }
+
+    .social-links {
+        list-style: none; /* Removes default list styling */
+        display: flex; /* Aligns items in a row */
+        margin: 0; /* Removes default margin */
+        padding: 0; /* Removes default padding */
+    }
+    
+    .social-links li {
+        margin-left: 10px; /* Adds space between social icons */
     }
 
     
-}
-
-@media only screen and (max-width: 1300px){
-
-    .copyright p {
-        margin: auto auto;
-    }
-
-    .for-us {
-        display: none;
-    }
-
-    .footer-content {
-        display: space-evenly;
-        
-    }
 }
 
 
@@ -1300,18 +1502,29 @@ footer {
     .nav-info {
         display: none;
     }
-
+    
     .menu-toggle {
         display: block; /* Show menu toggle icon */
     }
 
+    #mainImage {
+        height: 500px;
+        width: 100%;/* Hide the original image on smaller screens */
+        filter:blur(3px);
+    }
+    .image-main h1 {
+        font-size: 24px;
+        text-wrap: wrap;
+        margin-top: -30px;
+    }
+    
     nav ul {
         display: none;
         flex-direction: column;
         position: fixed; /* Fixed position to cover full viewport height */
         top: 0;
         right: 0;
-        width: 30%; /* Adjust width as needed */
+        width: 60%; /* Adjust width as needed */
         height: 100vh; /* Full viewport height */
         background-color: #ffffff;
         box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.1);
@@ -1320,33 +1533,33 @@ footer {
         transition: transform 0.3s ease-in-out;
         transform: translateX(-100%); /* Start off-screen */
     }
-
+    
     nav ul.open {
         display: flex;
         transform: translateX(0);
     }
-
+    
     nav ul li {
         margin: 10px 0;
     }
-
+    
     .menu-toggle span {
         background-color: #000;
         transition: transform 0.3s ease;
     }
-
+    
     .menu-toggle.open span:nth-child(1) {
         transform: rotate(-45deg) translate(-5px, 6px);
     }
-
+    
     .menu-toggle.open span:nth-child(2) {
         opacity: 0;
     }
-
+    
     .menu-toggle.open span:nth-child(3) {
         transform: rotate(45deg) translate(-5px, -6px);
     }
-
+    
     .dropdown-content {
         position: static; /* Reset dropdown positioning */
         display: none; /* Hide dropdowns initially */
@@ -1354,12 +1567,155 @@ footer {
         overflow-y: visible; /* Reset overflow */
         margin-top: 0; /* Reset margin */
     }
-
+    
     nav ul li.dropdown:hover .dropdown-content {
-        display: none; /* Keep dropdowns hidden on hover */
+        display:none; /* Keep dropdowns hidden on hover */
     }
-}
 
+    .about-us-main-container {
+        margin: 0;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .about-us-main-container .about-content p {
+        font-size: 10px;
+    }
+    
+
+    .about-us-main-container .about-content .image-info-about {
+        width: 65%;
+        height: 60%;
+    }
+    
+
+    .why-us.container {
+        height: 100%;
+    }
+
+    .reviews-container {
+        height: 100%;
+        overflow-x:hidden;
+    }
+
+    .reviews-carousel {
+        max-width: 90%;
+        overflow-x: scroll;
+    }
+
+    .contact-form .sub-title {
+        text-align: center;
+    }
+
+    .contact-form {
+        height: fit-content;
+        overflow-y: hidden;
+    }
+
+    .about-us-main-container .about-content .contact-button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .contact-form-side form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .contact-form-side iframe {
+        width: 100%;
+    }
+
+    .footer-content {
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column; /* Stack items vertically */
+        align-items: center; /* Center-align items horizontally */
+    }
+
+    .for-us {
+        display: none;
+    }
+
+    .services p,
+    .contact-info p,
+    .working-time p {
+        text-align: center; /* Center-align <p> tags */
+        margin: 0; /* Remove default margins */
+    }
+
+    .services,
+    .contact-info,
+    .working-time {
+        
+         /* Full width */
+        margin-bottom: 20px;
+         /* Add spacing between sections */
+        text-align: center;
+        align-items: center;
+        align-self: center;
+    }
+
+    .services h3,
+    .contact-info h3,
+    .working-time h3{
+         /* Full width */
+        margin-bottom: 20px;
+         /* Add spacing between sections */
+        text-align: center;
+        align-items: center;
+        align-self: center;
+    }
+
+    .services ul,
+    .contact-info ul,
+    .working-time ul {
+        padding-left: 0; /* Remove default padding */
+        list-style-type: none; /* Remove default list styles */
+        text-align: center; 
+        align-items: center;/* Reset text alignment for list items */
+    }
+
+    .services li,
+    .contact-info li,
+    .working-time li {
+        text-align: center; /* Center-align list items */
+        align-self: center;
+        align-items: center;
+    }
+
+    .copyright {
+        margin: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .copyright p {
+        margin: 0; /* Removes default margin */
+        font-size: 14px; /* Example font size */
+    }
+
+    .social-links {
+        list-style: none; /* Removes default list styling */
+        display: flex; /* Aligns items in a row */
+        margin: 0; /* Removes default margin */
+        padding: 0; /* Removes default padding */
+    }
+    
+    .social-links li {
+        margin-left: 10px; /* Adds space between social icons */
+    }   
+}
 
 @media only screen and (max-width: 450px) {
 
@@ -1436,6 +1792,57 @@ footer {
         display:none; /* Keep dropdowns hidden on hover */
     }
 
+    .about-us-main-container {
+        margin-top: 80px;
+        height: fit-content;
+    }
+
+    .about-us-main-container .about-content p {
+        font-size: 10px;
+    }
+    
+
+    .about-us-main-container .about-content .image-info-about {
+        display: none;
+    }
+    
+
+    .why-us.container {
+        margin-top: 100px;
+        height: fit-content;
+    }
+
+    .reviews-container {
+        height: 100%;
+        overflow-x:hidden;
+    }
+
+    .reviews-carousel {
+        max-width: 400px;
+        overflow-x: scroll;
+    }
+
+    .contact-form .sub-title {
+        text-align: center;
+    }
+
+    .contact-form {
+        height: fit-content;
+        overflow-y: hidden;
+    }
+
+    .contact-form-side form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .contact-form-side iframe {
+        width: 100%;
+    }
+
     .footer-content {
         height: fit-content;
         width: 100%;
@@ -1460,8 +1867,7 @@ footer {
 
     .services,
     .contact-info,
-    .working-time,
-    .copyright {
+    .working-time {
         
          /* Full width */
         margin-bottom: 20px;
@@ -1473,8 +1879,7 @@ footer {
 
     .services h3,
     .contact-info h3,
-    .working-time h3,
-    .copyright {
+    .working-time h3 {
          /* Full width */
         margin-bottom: 20px;
          /* Add spacing between sections */
@@ -1482,6 +1887,31 @@ footer {
         align-items: center;
         align-self: center;
     }
+
+    .copyright {
+        margin: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .copyright p {
+        margin: 0; /* Removes default margin */
+        font-size: 14px; /* Example font size */
+    }
+
+    .social-links {
+        list-style: none; /* Removes default list styling */
+        display: flex; /* Aligns items in a row */
+        margin: 0; /* Removes default margin */
+        padding: 0; /* Removes default padding */
+    }
+    
+    .social-links li {
+        margin-left: 10px; /* Adds space between social icons */
+    }
+   
 
     .services ul,
     .contact-info ul,
@@ -1500,10 +1930,7 @@ footer {
         align-items: center;
     }
 
-    .reviews-container {
-        max-width: 100%;
-        overflow-y: scroll;
-    }
+    
 }
     
 
