--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1496,6 +1496,91 @@ footer {
 }
 
 
+@media only screen and (max-width: 1000px){
+
+    .footer-content {
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column; /* Stack items vertically */
+        align-items: center; /* Center-align items horizontally */
+    }
+
+    .services p,
+    .contact-info p,
+    .working-time p {
+        text-align: center; /* Center-align <p> tags */
+        margin: 0; /* Remove default margins */
+    }
+
+    .services,
+    .contact-info,
+    .working-time {
+        
+         /* Full width */
+        margin-bottom: 20px;
+         /* Add spacing between sections */
+        text-align: center;
+        align-items: center;
+        align-self: center;
+    }
+
+    .services h3,
+    .contact-info h3,
+    .working-time h3{
+         /* Full width */
+        margin-bottom: 20px;
+         /* Add spacing between sections */
+        text-align: center;
+        align-items: center;
+        align-self: center;
+    }
+
+    .services ul,
+    .contact-info ul,
+    .working-time ul {
+        padding-left: 0; /* Remove default padding */
+        list-style-type: none; /* Remove default list styles */
+        text-align: center; 
+        align-items: center;/* Reset text alignment for list items */
+    }
+
+    .services li,
+    .contact-info li,
+    .working-time li {
+        text-align: center; /* Center-align list items */
+        align-self: center;
+        align-items: center;
+    }
+
+    .copyright {
+        margin: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .copyright p {
+        margin: 0; /* Removes default margin */
+        font-size: 14px; /* Example font size */
+    }
+
+    .social-links {
+        list-style: none; /* Removes default list styling */
+        display: flex; /* Aligns items in a row */
+        margin: 0; /* Removes default margin */
+        padding: 0; /* Removes default padding */
+    }
+    
+    .social-links li {
+        margin-left: 10px; /* Adds space between social icons */
+    }   
+ }
+
 /* Media query for screens up to 768px */
 @media (max-width: 768px) {
 
@@ -1643,6 +1728,52 @@ footer {
 
     .for-us {
         display: none;
+    }
+
+    .our-services-main {
+        height: fit-content;
+        width: 100%;
+    }
+
+    .our-services-main .image {
+        display: none;
+    }
+    
+    .text #five-services {
+        font-size: 20px;
+    }
+
+    .site-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .site-title {
+        font-size: 32px;
+    }
+
+    .site-main {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .services-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: fit-content;
+    }
+    
+
+    .service-card {
+        margin: 10px 0;
+        width: 100%;
     }
 
     .services p,
@@ -1856,6 +1987,52 @@ footer {
 
     .for-us {
         display: none;
+    }
+
+    .our-services-main {
+        height: fit-content;
+        width: 100%;
+    }
+
+    .our-services-main .image {
+        display: none;
+    }
+    
+    .text #five-services {
+        font-size: 20px;
+    }
+
+    .site-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .site-title {
+        font-size: 32px;
+    }
+
+    .site-main {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .services-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: fit-content;
+    }
+    
+
+    .service-card {
+        margin: 10px 0;
+        width: 100%;
     }
 
     .services p,
